# vlm-web-app

./: README.md  export_to_onnx.py  llava.py  onxx_tensorrt.py  onxx_tensorrt2.py  pyproject.toml  requirements.txt  vlm_infer_flask.py
app/: __init__.py  config.py
app/routes/: inference_routes.py  main_routes.py
app/services/: llava_inference.py  smolvlm_inference.py  smolvlm_inference_base.py  smolvlm_inference_optimized.py
app/static/: script.js  style.css
app/templates/: index.html
