[project]
name = "vlm-web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.2.1",
    "bitsandbytes>=0.45.0",
    "flask>=3.1.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
